--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,15 @@
 
 body {
   font-family: 'Comfortaa', cursive;
-  font-size: 18px;
-  }
-  
-  .background {
-    background-image: url("./assets/images/concrete-texture.png");
-  }
+font-size: 18px;
+}
 
-  /* .card:hover {
-    background-color: lightgray;
-  } */
+.background {
+  background-image: url("./assets/images/concrete-texture.png");
+}
+@media only screen and (max-width: 582px) {
+  .brand-logo {
+  font-size: 20px;
+}
+  
+}
