--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 
 body {
-  font-family: 'Comfortaa', cursive;
+font-family: 'Comfortaa', cursive;
 font-size: 18px;
 }
 
 .background {
-  background-image: url("./assets/images/concrete-texture.png");
+  background-image: url("../images/concrete-texture.png");
 }
 @media only screen and (max-width: 582px) {
   .brand-logo {
